Fixed spacing and padding for multiple pages on cell phone

--- a/employment/employment.css
+++ b/employment/employment.css
@@ -198,6 +198,6 @@ footer a:hover {
 
     .job {
         font-size: calc(2px + 3vw);
-        padding: 8vh 20px;
+        padding: 7vh 20px;
     }
 }
